@@ -1,0 +1,192 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html><head>
+  <meta content="text/html; charset=iso-8859-1"><!-- design by Benjamin Henrion <bh_at_udev_dot_org> http://bh.udev.org
+       and Peter Gerwinski <peter_at_gerwinski_dot_de> http://www.peter.gerwinski.de --><title>STOP Software Patents in the EU!</title>
+  
+  
+  <style type="text/css">
+   body {
+         background: yellow;
+         font-family: Arial, Helvetica, sans-serif;
+   }
+   h1 {
+         color: darkblue;
+         font-size: 64px;
+         margin-top: 0.2em;
+         margin-bottom: 0em;
+         margin-left: 5%;
+         margin-right: 5%;
+         text-align: center;
+   }
+   a {
+         color: darkblue;
+         font-weight: bold;
+         outline: none;
+         text-decoration: underline;
+   }
+   a:hover {
+         color: blue;
+         text-decoration: underline;
+   }
+   #content {
+         background: #d7e0ff;
+         padding: 1em;
+         border: 2px solid darkblue;
+         margin-top: 2%;
+         margin-bottom: 2%;
+         margin-left: 15%;
+         margin-right: 15%;
+         font-size: 15px;
+   }
+   #mainmsg {
+         padding: 1em 1em;
+         margin: 10px;
+         border: 1px dashed darkblue;
+         background: white;
+         font-size: 17px;
+         font-weight: bold;
+   }
+   #textbox1 {
+	 width: 40%;
+	 float: right;
+         background: white;
+         padding: 0em 1em;
+         margin: 10px;
+         border: 1px dashed darkblue;
+         font-size: 13px;
+   }
+   #textbox1 a {
+	 font-weight: normal;
+   }
+   #textbox1 ul {
+	 padding-bottom: none;
+	 padding-left: 10px;
+   }
+   #textbox1 li {
+	 margin-bottom: 10px;
+   }
+   #textbox2 {
+	 width: 90%;
+         background: white;
+         padding: 0em 1em;
+         margin: 30px 10px;
+         border: 1px dashed darkblue;
+         font-size: 13px;
+   }
+   #textbox2 a {
+	 font-weight: normal;
+   }
+   #footer {
+         font-style: italic;
+         font-size: 13px;
+         text-align: center;
+   }
+   #footer a {
+         border: none;
+   }
+   .big {
+         color: darkblue;
+	 font-size: 22px;
+	 font-weight: bold;
+   }
+   .clock {
+	 background-color: #A6A98D;
+	 color: black;
+	 font-family: verdana;
+	 float: center;
+	 border: 1px solid black;
+	 border-collapse: collapse;
+    }
+    .time {
+	 fontsize: 50;
+    }
+    .clock TD {
+	 border: 1px solid black;
+	 border-collapse: collapse;
+	 text-position: center;
+    }
+    b {color:black}
+  </style>
+
+<script language="JavaScript" type="text/javascript">
+function time() {
+    var today = new Date();
+    var deadline = new Date( 2005, 6, 6, 12, 0, 0);
+    var difdate = new Date(deadline.getTime() - today.getTime());
+    var seconds_left = parseInt(difdate.getTime() / 1000);
+    var minutes_left = parseInt(seconds_left / 60);
+    var hours_left = parseInt(minutes_left / 60);
+    var days_left = parseInt(hours_left / 24);
+//    var millisecs_left = difdate % 1000;
+//    if (millisecs_left < 10) { millisecs_left = "00" + millisecs_left; }
+//    else if (millisecs_left < 100) { millisecs_left = "0" + millisecs_left; }
+    seconds_left = seconds_left % 60;
+//    if (seconds_left < 10) { seconds_left = "0" + seconds_left; }
+    minutes_left = minutes_left % 60;
+//    if (minutes_left < 10) { minutes_left = "0" + minutes_left; }
+    hours_left = hours_left % 24;
+//    if (hours_left < 10) { hours_left = "0" + hours_left; }
+    document.getElementById("days-left").innerHTML = days_left;
+    document.getElementById("hours-left").innerHTML = hours_left;
+    document.getElementById("minutes-left").innerHTML = minutes_left;
+    document.getElementById("seconds-left").innerHTML = seconds_left;
+//    document.getElementById("millisecs-left").innerHTML = millisecs_left;
+    clocktime=setTimeout("time()", "100");
+}
+</script></head>
+
+ <body onload="time()">
+  <h1>STOP Software&nbsp;Patents!</h1>
+  <div id="content">
+   <p id="mainmsg">
+    We are asking our representatives in the European Parliament to
+    save Europe from software patents by following the
+    <a href="http://europarl.ffii.org/amendments.en.html">Buzek-Rocard-Duff amendments</a>.
+   </p>
+   <p>
+    The Software Patents Directive, as approved by the European
+    Council of Ministers, would <strong>legalise US-style Software
+    Patents</strong> in the European Union.
+   </p>
+   <div id="textbox1">
+    <p><strong>
+     How you can help
+    </strong></p>
+    <ul>
+     <li>
+      Join <a href="http://noepatents.eu.org/">this web demo</a>.
+     </li>
+     <li>
+      Join <a href="http://www.economic-majority.com/">economic-majority.com</a>.
+     </li>
+     <li>
+      Join the <a href="http://noepatents.eu.org/index.php/StbDemo050604">demonstration in Strasbourg</a>.
+     </li>
+    </ul>
+   </div>
+   <p>
+    If that happens, software developers will no longer own what
+    they write and can be sued for selling or distributing
+    <strong>their own software</strong>.
+    This would not only endanger <em>your</em> job, but the entire
+    European software sector.
+   </p>
+   <p>
+    On Wed the 6<sup>th</sup> of July, 
+    <span id="days-left" class="big">5</span> days and
+    <span id="hours-left" class="big">5</span>h
+    <span id="minutes-left" class="big">5</span>m
+    <span id="seconds-left" class="big">5</span>s
+    from now,
+    the European Parliament will have the last
+    chance to prevent this. To do so, 367 of the 732 members must
+    be <strong>present</strong> and
+    <strong>vote for the right amendments</strong>.
+   </p>
+   </div>
+  <p id="footer">
+   When you have done your part:<br>
+   <!-- In the href="..." below, put a link to your webpage index. -->
+   <a href="index.php">Click here to enter the FVWM web site &gt;&gt;</a>
+  </p>
+ </body></html>
