@@ -1,3 +1,9 @@
+2005-07-03  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* .htaccass:
+	* index.html:
+	Added page against software patents
+
 2005-04-29  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* links.php:
